--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,33 @@
     "my_number = None\n",
     "if number_50 > 100:\n",
     "    # if number_50 is greater than 100, assign the `my_number` variable to the number 100\n",
+    "    my_number = 100\n",
     "elif number_50 > 50:\n",
     "    # if number_50 is greater than 50, assign the `my_number` variable to the number 50\n",
+    "    my_number = 50\n",
     "else:\n",
-    "    # else assign the `my_number` variable to 0"
+    "    # else assign the `my_number` variable to 0\n",
+    "    my_number = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_number"
    ]
   },
   {
@@ -45,13 +68,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It is so hot out!'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "if temperature >= 80:\n",
+    "    is_it_hot = \"It is so hot out!\"\n",
+    "else:\n",
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"\n",
+    "    \n",
+    "is_it_hot"
    ]
   },
   {
@@ -64,13 +104,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "if today_is == 1:\n",
+    "    day_of_the_week = 'Sunday'\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = 'Monday'\n",
+    "elif today_is == 3:\n",
+    "    day_of_the_week = \"Tuesday\"\n",
+    "elif today_is == 4:\n",
+    "    day_of_the_week = \"Wednesday\"\n",
+    "elif today_is == 5:\n",
+    "    day_of_the_week = \"Thursday\"\n",
+    "elif today_is == 6:\n",
+    "    day_of_the_week = \"Friday\"\n",
+    "elif today_is == 7:\n",
+    "    day_of_the_week = \"Saturday\"\n",
+    "    \n",
+    "day_of_the_week"
    ]
   },
   {
@@ -82,14 +149,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "if string.endswith(sub_string):\n",
+    "    ends_with = True\n",
+    "else:\n",
+    "    ends_with = False\n",
+    "    \n",
+    "ends_with"
    ]
   },
   {
@@ -100,6 +184,22 @@
     "\n",
     "Great! In this lab we saw how to use our knowedge of conditionals to selectively assign values based on a condition. We will start integrating conditionals in many more ways in our code and we will start to see how useful they can become in more complex problems."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -118,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
